# 3DVLMReasoning

./: .gitignore  CLAUDE.md  README.md  auto-claude.sh  pyproject.toml
bashes/embodiedscan/: 0_extract_sens.sh  1_prepare_scene.sh  1b_extract_2d_segmentation_detect.sh  2b_build_3d_object_map_detect.sh  6b_build_visibility_index.sh  6c_prune_detection_cache.sh  auto_after_download.sh  auto_wait_gpu_and_run.sh  launch_multi_gpu.sh  run_batch_pipeline.sh  run_full_pipeline.sh
bashes/openeqa_scannet/: 0_download_missing_scannet_raw.sh  1_prepare_clip_scene.sh  1b_extract_2d_segmentation_detect.sh  2b_build_3d_object_map_detect.sh  6b_build_visibility_index.sh  6c_prune_detection_cache.sh  7_validate_scene_graph.sh  8_enrich_objects.sh  launch_first10_after_raw_sync.sh  launch_multi_gpu_batch_to_6c.sh  run_batch_detect_pipeline_to_6c.sh  run_full_detect_pipeline_to_6c.sh
conceptgraph/: __init__.py
conceptgraph/dataset/: datasets_common.py  loader.py
conceptgraph/detection/: generate_florence2.py  generate_gsa.py  generate_sam3.py  generate_yoloe.py
docs/: 00_research_manifest.md  01_overview.md  02_architecture.md  0325.md  03_stage1_retrieval.md  04_stage2_agent.md  05_evaluation.md  06_evolution_v9_to_v14.md  07_data_layout.md  08_benchmarks_catalog.md  09_gotchas.md  11_academic_angles_catalog.md  README.md  architecture.md  branch_summary_multilabel_vocab_optimization.md  conceptgraph_detection_gap.html  configuration_guide.md  current_repo_state.md  dataset_guide.md  embodiedscan_data_handoff.md  embodiedscan_vg_v1_analysis.md  eval_analysis_20260324.md  eval_analysis_20260327.md  eval_analysis_v10_enriched_20260330.md  eval_analysis_v11_1_20260330.md  eval_analysis_v12_20260330.md  eval_analysis_v13_full_20260403.md  eval_results_summary.md  florence2_hybrid_detection_experiments.md  florence2_pipeline_handoff_20260325.md  handoff_2026-03-28_0003.md  handoff_2026-04-04_1831.md  handoff_2026-04-09_0147.md  handoff_2026-04-26_1630.md  migration_report.md  multi_benchmark_eval_handoff.md  openeqa_session_handoff_20260324.md  optimization_plan_20260327.md  stage2_agent_handoff.md  stage2_vlm_agent_design.md  (+4 more)
memory/: index.md  project_state.md  query_scene_knowledge.md  research_direction.md
schema/: hypothesis_output_v1.json
scripts/: README_generate_migration_test_data.md  _stage_pack_v1_data.sh  analyze_v15_results.py  compare_v1_vs_florence2.py  download_embodiedscan_meshes.sh  download_embodiedscan_sens.sh  download_scannet_mesh.py  generate_eval_report.py  generate_migration_test_data.py  run_florence2_pipeline.sh  run_migration_scorecard.py  run_sam3_pipeline.sh  run_v15_eval_matrix.sh  vdetr_export_predictions.py  visualize_sam3_3d_objects.py  visualize_sam3_results.py  visualize_scene_graph.py
tests/: __init__.py
(+516 files in other folders)
